[package]
name = "rustation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/wasm_unified.rs"

[features]
default = []
pgxp = []
debugger = []
vulkan = ["ash", "shaderc", "spirv-reflect"]
opengl = ["gl"]
compatibility-db = ["rusqlite", "chrono", "uuid"]
online-sync = ["reqwest", "tokio", "compatibility-db"]
netplay = ["tokio", "quinn", "webrtc", "igd"]
fightcade = ["netplay"]
tracy = ["dep:tracy-client"]
optick = ["dep:optick"]
discord-rpc = ["discord-rich-presence", "tokio", "serde_json"]
game-library = ["rusqlite", "chrono", "uuid", "regex"]
game-library-online = ["game-library", "reqwest", "tokio", "async-trait"]
compatibility-db = ["rusqlite", "chrono", "uuid"]
online-sync = ["reqwest", "tokio", "compatibility-db"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
log = "0.4"
wasm-logger = "0.2"
bitflags = "2.4"
arrayvec = "0.7"
lazy_static = "1.4"
bincode = "1.3"
# Texture replacement dependencies  
sha2 = "0.10"
image = "0.24"
flate2 = "1.0"
zip = "0.6"

# Database and compatibility dependencies
rusqlite = { version = "0.30", features = ["bundled", "serde_json"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt", "macros", "net", "sync", "time"], optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"], optional = true }
regex = { version = "1.10", optional = true }
async-trait = { version = "0.1", optional = true }
flexbuffers = "25.2.10"
toml = "0.8"
dirs = "5.0"

# Shader compilation dependencies
crossbeam-channel = "0.5"
hex = "0.4"
bincode = "1.3"
num_cpus = "1.16"
serde-big-array = "0.5"
libc = "0.2"

# Testing dependencies
backtrace = "0.3"

# Rewind system dependencies
zstd = "0.13"
crc32fast = "1.3"
fastrand = "2.0"

# Save state compression dependencies
lz4 = "1.24"
zstd = "0.13"
flate2 = "1.0"
crc32fast = "1.3"

# Additional save state dependencies
parking_lot = "0.12"
rayon = "1.7"
image = "0.24"
base64 = "0.21"

# Missing dependencies
cdimage = "0.1"

# GGPO Netplay dependencies
flate2 = "1.0"
crc32fast = "1.3"
ring = "0.17"
quinn = { version = "0.10", optional = true }
webrtc = { version = "0.9", optional = true }
igd = { version = "0.12", optional = true }
stun_codec = { version = "0.3", optional = true }
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"

# Vulkan dependencies
ash = { version = "0.37", optional = true }
shaderc = { version = "0.8", optional = true }
spirv-reflect = { version = "0.2", optional = true }

# OpenGL dependencies
gl = { version = "0.14", optional = true }

# External profiler dependencies
tracy-client = { version = "0.16", optional = true }
optick = { version = "1.3.4", optional = true }

# Discord Rich Presence dependencies
discord-rich-presence = { version = "0.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "Window",
  "CanvasRenderingContext2d",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlBuffer",
  "WebGlUniformLocation",
  "ImageData",
  "KeyboardEvent",
  "MouseEvent",
  "TouchEvent",
  "Touch",
  "TouchList",
  "PointerEvent",
  "WheelEvent",
  "GamepadEvent",
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "AudioDestinationNode",
  "AudioNode",
  "BaseAudioContext",
  "Gamepad",
  "GamepadButton",
  "Navigator",
  "Performance",
  "Storage",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbRequest",
  "IdbTransaction",
  "IdbFactory",
  "ServiceWorkerRegistration",
  "ServiceWorkerContainer",
  "Worker",
  "MessagePort",
  "OffscreenCanvas",
  "Blob",
  "File",
  "FileReader",
  "Url",
  "UrlSearchParams",
  "Response",
  "RequestInit",
  "RequestMode",
  "Headers",
  "WorkerGlobalScope",
]

[features]
default = []
pgxp = []
debugger = []
compatibility-db = ["rusqlite", "chrono", "uuid"]
online-sync = ["reqwest", "tokio", "compatibility-db"]

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack]
wasm-opt = false

