[package]
name = "rustation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/wasm_unified.rs"

[features]
default = []
pgxp = []
debugger = []
vulkan = ["ash", "shaderc", "spirv-reflect"]
opengl = ["gl"]
game-library = ["rusqlite", "chrono", "uuid", "regex"]
game-library-online = ["game-library", "reqwest", "tokio", "async-trait"]
compatibility-db = ["rusqlite", "chrono", "uuid"]
online-sync = ["reqwest", "tokio", "compatibility-db"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
wasm-logger = "0.2"
bitflags = "2.4"
arrayvec = "0.7"
lazy_static = "1.4"
# Texture replacement dependencies  
sha2 = "0.10"
image = "0.24"
flate2 = "1.0"
zip = "0.6"

# Database and compatibility dependencies
rusqlite = { version = "0.30", features = ["bundled", "serde_json"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"], optional = true }
regex = { version = "1.10", optional = true }
async-trait = { version = "0.1", optional = true }
flexbuffers = "25.2.10"
toml = "0.8"
dirs = "5.0"

# Shader compilation dependencies
crossbeam-channel = "0.5"
hex = "0.4"
bincode = "1.3"
num_cpus = "1.16"

# Testing dependencies
backtrace = "0.3"

# Rewind system dependencies
zstd = "0.13"
crc32fast = "1.3"
fastrand = "2.0"

# Vulkan dependencies
ash = { version = "0.37", optional = true }
shaderc = { version = "0.8", optional = true }
spirv-reflect = { version = "0.2", optional = true }

# OpenGL dependencies
gl = { version = "0.14", optional = true }

# Dear ImGui dependencies
imgui = "0.11"
imgui-wgpu = "0.24"
imgui-winit-support = "0.11"
imgui-sys = "0.11"
glium = { version = "0.32", optional = true }
imgui-glium-renderer = { version = "0.11", optional = true }
winit = "0.28"
wgpu = "0.17"
pollster = "0.3"

# Additional UI dependencies
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
rfd = "0.12"  # Native file dialogs
egui = { version = "0.24", optional = true }
egui-wgpu = { version = "0.24", optional = true }
egui-winit = { version = "0.24", optional = true }

[dev-dependencies]
flexbuffers = "2.0"
tempfile = "3.8"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "Window",
  "CanvasRenderingContext2d",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlBuffer",
  "WebGlUniformLocation",
  "ImageData",
  "KeyboardEvent",
  "MouseEvent",
  "TouchEvent",
  "Touch",
  "TouchList",
  "PointerEvent",
  "WheelEvent",
  "GamepadEvent",
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "AudioDestinationNode",
  "AudioNode",
  "BaseAudioContext",
  "Gamepad",
  "GamepadButton",
  "Navigator",
  "Performance",
  "Storage",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbRequest",
  "IdbTransaction",
  "IdbFactory",
  "ServiceWorkerRegistration",
  "ServiceWorkerContainer",
  "Worker",
  "MessagePort",
  "OffscreenCanvas",
  "Blob",
  "File",
  "FileReader",
  "Url",
  "UrlSearchParams",
  "Response",
  "RequestInit",
  "RequestMode",
  "Headers",
  "WorkerGlobalScope",
]

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack]
wasm-opt = false

